// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Chapters Chapters with props 1`] = `
<div
  class="h-full"
>
  <div
    class="p-accordion p-component"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_2_content"
          class="p-accordion-header-link"
          id="pv_id_2_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <span
            class="p-accordion-header-text"
          >
            Premier chapitre
          </span>
           
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_2_header"
        class="p-toggleable-content"
        id="pv_id_2_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
          <a
            class="mock-link"
          >
            
      Première page
    
          </a>
          <a
            class="mock-link"
          >
            
      Deuxième page
    
          </a>
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_3_content"
          class="p-accordion-header-link"
          id="pv_id_3_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <span
            class="p-accordion-header-text"
          >
            Deuxième chapitre
          </span>
           
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_3_header"
        class="p-toggleable-content"
        id="pv_id_3_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
          <a
            class="mock-link"
          >
            
      Troisième page
    
          </a>
          <a
            class="mock-link"
          >
            
      Quatrième page
    
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Chapters Chapters without props 1`] = `
<div
  class="h-full"
>
  <div
    class="p-accordion p-component"
  >
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_1_content"
          class="p-accordion-header-link"
          id="pv_id_1_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <span
            class="p-accordion-header-text"
          >
            Aucun chapitre à afficher
          </span>
           
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_1_header"
        class="p-toggleable-content"
        id="pv_id_1_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        />
      </div>
    </div>
  </div>
</div>
`;
